@@ -11,6 +11,10 @@ Version 1.11.0+svn:
    * New translation: Ukrainian.
    * Updated translations:
 
+ * Miscellaneous and bug fixes:
+   * Fix invalid memory access crash resulting from deleting all saved games
+     in the Load Game dialog.
+
 
 Version 1.11.0:
  * Add-ons client:
