@@ -4,6 +4,9 @@ Version 1.11.0+svn:
      * Keep a spawned unit from disappearing on reload in scenario 6b
  * Language and i18n:
    * Updated translations:
+ * Miscellaneous and bug fixes:
+   * Fix invalid memory access crash resulting from deleting all saved games
+     in the Load Game dialog
 
 Version 1.11.0:
  * Add-ons client:
